Section spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -157,7 +157,7 @@ body {
 }
 
 /* Sections */
-.section {
+section {
   margin-bottom: 8rem;
 }
 
